2006-03-10  Lillian Angel  <langel@redhat.com>

	* gnu/testlet/java/awt/Button/PaintTest.java: New Test.
	* gnu/testlet/java/awt/Canvas/PaintTest.java: New Test.
	* gnu/testlet/java/awt/Checkbox/PaintTest.java: New Test.
	* gnu/testlet/java/awt/Label/PaintTest.java: New Test.
	* gnu/testlet/java/awt/List/ScrollbarPaintTest.java: New Test.
	* gnu/testlet/java/awt/ScrollPane/ScrollbarPaintTest.java: New Test.
	* gnu/testlet/java/awt/Scrollbar/ScrollbarPaintTest.java: New Test.
	* gnu/testlet/java/awt/TextArea/ScrollbarPaintTest.java: New Test.
	* gnu/testlet/java/awt/TextField/PaintTest.java: New Test.
	* gnu/testlet/java/awt/Choice/PaintTest.java: New Test.

2006-03-10  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* gnu/testlet/java/beans/Introspector/A.java: Added not-a-test
	tag.
	* gnu/testlet/java/beans/Introspector/B.java: Likewise.
	* gnu/testlet/java/beans/Introspector/C.java: Likewise.

2006-03-10  Thomas Fitzsimmons  <fitzsim@redhat.com>

	* gnu/testlet/java/awt/Graphics/TestPaintGraphics.java: Fix test.

	* gnu/testlet/java/awt/Graphics/TestPaintGraphics.java: New test.

	* gnu/testlet/javax/imageio/plugins/jpeg/TestJPEGHuffmanTable.java:
	New test.

2006-03-08  Michael Koch  <konqueror@gmx.de>

	* gnu/testlet/java/net/InetSocketAddress/createUnresolved.java:
	New testcase.

2006-03-07  Olivier Jolly  <olivier.jolly@pcedev.com>

	* gnu/testlet/java/net/URLClassLoader/getResourceBase.java (check): Added
	canonalization of tested filenames.
	* gnu/testlet/java/net/URLCLassLoader/getResource.java (test, setup): Added
	more special situations checks with ".." and invalid directories. Fixed
	and documented existing checks dealing with directories.
	Based on Robin Green's patch.

2006-03-07  David Gilbert  <david.gilbert@object-refinery.com>

	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/DefaultMutableTreeNodeTest.java: Updated header,
	* gnu/testlet/javax/swing/tree/DefaultMutableTreeNode/getChildAfter.java
	(test): Reworked,