@@ -1,3 +1,12 @@
+2006-03-11  David Gilbert  <david.gilbert@object-refinery.com>
+
+	* gnu/testlet/javax/swing/event/TreeSelectionEvent/cloneWithSource.java: 
+	New file,
+	* gnu/testlet/javax/swing/event/TreeSelectionEvent/constructors.java: 
+	Likewise,
+	* gnu/testlet/javax/swing/event/TreeSelectionEvent/isAddedPath.java: 
+	Likewise.
+
 2006-03-10  Lillian Angel  <langel@redhat.com>
 
 	* gnu/testlet/java/awt/Button/PaintTest.java: New Test.
